--- a/.github/workflows/check_new_releases.yml
+++ b/.github/workflows/check_new_releases.yml
@@ -25,6 +25,11 @@ jobs:
   check-updates:
     runs-on: ubuntu-latest
 
+    # permissions must be set even when using a PAT
+    permissions:
+      contents: write
+      pull-requests: write
+
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v4.2.2
@@ -48,6 +53,8 @@ jobs:
             Please review and merge if everything looks good.
           commit-message: Update modules
           branch: bot/modules-update
+          # Target main branch, regardless of where this workflow was triggered from.
+          base: main
           # Use token with write access.
           # Using a different token than GITHUB_TOKEN is required,
           # in order to trigger subsequent PR-workflows.
