--- a/.github/workflows/check_new_releases.yml
+++ b/.github/workflows/check_new_releases.yml
@@ -34,6 +34,31 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v4.2.2
 
+      - name: Debug PAT
+        run: |
+          echo "SCORE_BOT_PAT is set: [${{ secrets.SCORE_BOT_PAT != '' }}]"
+          echo "GITHUB_TOKEN is set: [${{ secrets.GITHUB_TOKEN != '' }}]"
+        env:
+          SCORE_BOT_PAT: ${{ secrets.SCORE_BOT_PAT }}
+
+      - name: "Debug PAT: /user"
+        run: |
+          curl -s -H "Authorization: token $SCORE_BOT_PAT" https://api.github.com/user
+        env:
+          SCORE_BOT_PAT: ${{ secrets.SCORE_BOT_PAT }}
+
+      - name: "Debug PAT: /repos/eclipse-score/bazel_registry"
+        run: |
+          curl -s -H "Authorization: token $SCORE_BOT_PAT" https://api.github.com/repos/eclipse-score/bazel_registry
+        env:
+          SCORE_BOT_PAT: ${{ secrets.SCORE_BOT_PAT }}
+
+      - name: "Debug PAT: /user/repos"
+        run: |
+          curl -s -H "Authorization: token $SCORE_BOT_PAT" https://api.github.com/user/repos?per_page=100
+        env:
+          SCORE_BOT_PAT: ${{ secrets.SCORE_BOT_PAT }}
+
       - name: Run version checker script
         id: check_versions
         env:
