--- a/.github/workflows/check_new_releases.yml
+++ b/.github/workflows/check_new_releases.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v4.2.2
-        env:
+        with:
           # For pushing and PR we want to use a PAT with write access.
           persist-credentials: false
 
